# python_code_challenge_2021

src/: README.md  main.py
src/got_episodes/: manage.py  pyproject.toml
src/got_episodes/episodes/: models.py  services.py
src/got_episodes/got_backend/: asgi.py  settings.py  urls.py  wsgi.py
